# AANusecase-cooperative-autonomy

./: README.md  supervisory_controldb0.py  supervisory_controldb1.py
agent_msgs/: CMakeLists.txt  package.xml
agent_msgs/msg/: CAcommand.msg  DriveOrder.msg  OperationControl.msg  Status.msg  Task.msg  VehicleStatus.msg
agent_msgs/srv/: ControlAvailable.srv  GetControl.srv  GetRoute.srv  RobotIdle.srv  RouteAvailable.srv  RouteFinished.srv  RouteStarted.srv  SetStatus.srv  StandardAction.srv  StartRoute.srv
bt_agent/: CMakeLists.txt  README.md  package.xml
bt_agent/behavior_trees/: fibonacci_demo_bt.xml  helloworld_bt.xml  service_demo_bt.xml  specific_bt.xml  switch_bin.xml
bt_agent/config/: params.yaml
bt_agent/launch/: agent_launch.py  (+1 more)
bt_msgs/: CMakeLists.txt  package.xml
bt_msgs/action/: Fibonacci.action  RoleLelyCa.action
bt_msgs/msg/: Param.msg
bt_msgs/srv/: Empty.srv  LocationServer.srv
ca/: CMakeLists.txt  README.md  package.xml
ca/behavior_trees/: ca_bt.xml  ca_bt_h2.xml  ca_bt_h2trac.xml
ca/ca/: __init__.py
ca/config/: params_server.yaml
ca/include/ca/plugins/action/: send_command_service.hpp
ca/include/ca/plugins/condition/: is_current_chaserbin_exit_condition.hpp  is_current_chaserbin_full_condition.hpp  is_error_condition.hpp  is_fleet_message_get_condition.hpp  is_resume_condition.hpp  is_standby_chaserbin_start_condition.hpp  is_standby_chaserbin_there_condition.hpp
ca/launch/: agent_launch.py  agent_launch_h2.py  bringup_launch.py
ca/plugins/action/: send_command_service.cpp
ca/plugins/condition/: is_current_chaserbin_exit_condition.cpp  is_current_chaserbin_full_condition.cpp  is_error_condition.cpp  is_message_fleet_get_condition.cpp  is_resume_condition.cpp  is_standby_chaserbin_start_condition.cpp  is_standby_chaserbin_there_condition.cpp
ca/scripts/: Astar.py  H2robot.py  LelyCollector.py  ca.py  ca_bt_handler.py  ca_bt_handler_h2.py  ca_node_test.py  helper.py
ca/src/: main.cpp
durablecase_ui/: CMakeLists.txt  QUICKSTART.md  README.md  package.xml
durablecase_ui/include/durablecase_ui/: main_window.hpp  map_visualization.hpp
durablecase_ui/src/: main.cpp  main_window.cpp  map_visualization.cpp
fa/: CMakeLists.txt  README.md  package.xml
fa/behavior_trees/: fa_bt.xml
fa/config/: master_list.xml  params_server.yaml  setting.xml
fa/fa/: __init__.py
fa/include/fa/plugins/action/: compute_send_service.hpp
fa/include/fa/plugins/condition/: is_request_get_condition.hpp
fa/launch/: agent_launch.py  agent_launch_h2.py  bringup_launch.py  map_server.py
fa/maps/: DurableCaseH2.pgm  DurableCaseH2.yaml
fa/plugins/action/: compute_send_service.cpp
fa/plugins/condition/: is_fleet_message_get_condition.cpp  is_request_get_condition.cpp
fa/scripts/: Astar.py  H2robot.py  fa.py  fa_bt_handler.py  fa_bt_handler_h2.py  helper.py
fa/src/: main.cpp
h2trac_msgs/: CMakeLists.txt  package.xml
h2trac_msgs/msg/: MissionStatus.msg  RobotStatus.msg  SetMission.msg  SetMotion.msg
lely_msgs/: CMakeLists.txt  package.xml
lely_msgs/msg/: RobotPose.msg  RobotStatus.msg  RouteStatus.msg  SetOperationStatus.msg  StartRouteCommand.msg
mas_msgs/: CMakeLists.txt  README.md  package.xml
mas_msgs/action/: Empty.action
mas_msgs/doc/: durablecase_interface.drawio
mas_msgs/msg/: CAcommand.msg  Eventpara.msg  FleetStatus.msg  Forecast.msg  Status.msg  Task.msg  TaskList.msg  VehicleFeedback.msg  VehicleStatus.msg
mas_msgs/srv/: ControlAvailable.srv  GetControl.srv  GetRoute.srv  SetStatus.srv  StartRoute.srv
mla/: CMakeLists.txt  README.md  package.xml
supervisor_control/: CMakeLists.txt  README.md  package.xml
supervisor_control/config/: policies.yaml
supervisor_control/launch/: supervisor_control.launch.py
supervisor_control/scripts/: supervisory_control_node.py
supervisor_control/supervisor_control/: __init__.py
supervisor_msgs/: CMakeLists.txt  README.md  package.xml
supervisor_msgs/msg/: AgentStatus.msg  ConflictResolution.msg  SystemState.msg  TaskAllocation.msg
supervisor_msgs/srv/: AllocateTask.srv  QueryAgentStatus.srv
voa/: CMakeLists.txt  README.md  package.xml
voa/behavior_trees/: default_bt.xml  voa_bt.xml  voa_bt_old.xml  voa_palette.xml
voa/config/: harvester_coordinates.xml  lab.xml  params_Robot0.yaml  params_robot1.yaml  params_robot2.yaml  schedule_robot1_regular.xml  schedule_robot1_takeover.xml  schedule_robot2_regular.xml  schedule_robot2_takeover.xml  task_list_Robot0.xml  task_list_Robot1.xml  task_list_Robot2.xml
voa/doc/: DriveOrder.plantuml  DriveOrder_with_resource_sharing.plantuml  Lely_Agent_Interaction.odt  VehicleStatus.plantuml  durablecase_interface - 20210526.drawio  interfaces  testcommands
voa/include/voa/plugins/action/: execute_command_service.hpp  get_control_service.hpp  get_route_service.hpp  send_status_service.hpp  set_status_service.hpp  start_route_service.hpp  update_status_service.hpp
voa/include/voa/plugins/condition/: control_available_condition.hpp  is_CAcommand_get_condition.hpp  is_event_get_condition.hpp  is_time_passed_condition.hpp  robot_available_condition.hpp  robot_idle_condition.hpp  route_available_condition.hpp  route_finished_condition.hpp  route_started_condition.hpp
voa/launch/: agent_launch.py  agent_launch_h2.py  bringup_launch.py  bringup_launch_robot1.py  bringup_launch_robot2.py  robot_launch.py
voa/plugins/action/: execute_command_service.cpp  get_control_service.cpp  get_route_service.cpp  send_status_service.cpp  set_status_service.cpp  start_route_service.cpp  update_status_service.cpp
voa/plugins/condition/: control_available_condition.cpp  is_CAcommand_get_condition.cpp  is_event_get_condition.cpp  is_time_passed_condition.cpp  robot_available_condition.cpp  robot_idle_condition.cpp  route_available_condition.cpp  route_finished_condition.cpp  route_started_condition.cpp
voa/scripts/: Astar.py  helper.py  rcl_chaserbin.py  rcl_harvester.py  voa.py  voa_bt_handler.py  voa_bt_handler_h2.py  voa_command_handler.py  voa_node.py  xml_trajectory_planner_class.py
voa/src/: main.cpp
voa/voa/: __init__.py
(+35 files in other folders)
