<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agent_msgs</name>
  <version>0.0.0</version>
  <description>Agent messages package</description>
  <maintainer email="tomoe@example.com">tomoe</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>
  
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
