<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>durablecase_ui</name>
  <version>0.0.0</version>
  <description>DurableCase Multi-Agent Control UI - Qt-based dashboard with ROS2 integration</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_qt</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>supervisor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>Qt5Core</depend>
  <depend>Qt5Gui</depend>
  <depend>Qt5Widgets</depend>
  <depend>Qt5OpenGL</depend>
  <depend>glm</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
